api specification + tried to abstract database interaction
